fixed submenu appearing behind images

--- a/themes/evr/sass/_navigation.scss
+++ b/themes/evr/sass/_navigation.scss
@@ -173,6 +173,8 @@ a {
 		justify-content: space-between;
 		align-items: center;
 		flex-wrap: wrap;	
+		position: relative;
+		z-index: 99;
 		@include desktop {
 			height: 100%;
 			margin: 0 auto;
@@ -225,7 +227,7 @@ a {
 	.show-menu {
 		visibility: visible;
 		opacity: 1;
-		z-index: 1;
+		z-index: 999;
 		transform: translateY(0%);
 	}
 	
@@ -288,18 +290,11 @@ a {
 		}
 
 		@include desktop {
-			//transition stuff. keep playing.
-			// .sub-menu {
-			// 	max-height: 100px;
-			// 	transition: max-height 0.2s ease-in-out;
-			// 	transition-delay: 0.1s;
-			// }
 			.menu-item-37:hover {
 				.sub-menu {
 					position: absolute;
 					top: 0.1rem;
 					left: -2rem;
-					// max-height: 200px;
 				}
 			}
 		}
