--- a/themes/evr/style.css
+++ b/themes/evr/style.css
@@ -791,7 +791,9 @@ a:hover, a:active {
     -ms-flex-align: center;
         align-items: center;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap; }
+        flex-wrap: wrap;
+    position: relative;
+    z-index: 99; }
     @media (min-width: 800px) {
       .main-navigation .main-nav-container {
         height: 100%;
@@ -834,7 +836,7 @@ a:hover, a:active {
   .main-navigation .show-menu {
     visibility: visible;
     opacity: 1;
-    z-index: 1;
+    z-index: 999;
     transform: translateY(0%); }
   .main-navigation .menu-main-menu-container {
     -ms-flex-preferred-size: 100%;
@@ -1639,16 +1641,46 @@ object {
   @media (min-width: 800px) {
     .page-id-23 .location-evr-info-desktop {
       background-color: #000000;
+      opacity: 0.8;
+      color: #fff;
       display: block; }
+      .page-id-23 .location-evr-info-desktop .info-img {
+        background: url("../../assets/images/location/info.svg") center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        height: 25px;
+        width: 25px;
+        margin-right: 10px; }
       .page-id-23 .location-evr-info-desktop .evr-info-wrapper {
         display: -ms-flexbox;
         display: flex; }
-        .page-id-23 .location-evr-info-desktop .evr-info-wrapper .info-img {
-          background: url("../../assets/images/location/info.svg") center;
-          background-repeat: no-repeat;
-          background-size: contain;
-          height: 25px;
-          width: 25px; } }
+        .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs {
+          display: -ms-flexbox;
+          display: flex; }
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .evr-info-location p,
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .evr-info-num p {
+            margin: 0; }
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-date,
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-hours {
+            width: 100px; }
+            .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-date p,
+            .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-hours p {
+              margin: 0; }
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-head {
+            width: 60px; }
+            .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-head p {
+              margin: 0; }
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-date,
+          .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-hours {
+            width: 100px; }
+            .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-date p,
+            .page-id-23 .location-evr-info-desktop .evr-info-wrapper .location-date-hrs .location-hours p {
+              margin: 0; } }
+  .page-id-23 .location-evr-info-desktop .evr-email-wrapper {
+    display: -ms-flexbox;
+    display: flex; }
+    .page-id-23 .location-evr-info-desktop .evr-email-wrapper .evr-email-content p {
+      margin: 0; }
 
 .page-id-23 .location-evr-partners {
   background-color: black;
@@ -1803,7 +1835,8 @@ object {
   margin-bottom: 1rem; }
 
 .page-template-menu .chocolate-image-wrapper {
-  position: relative; }
+  position: relative;
+  z-index: 0; }
   .page-template-menu .chocolate-image-wrapper:before {
     display: block;
     content: "";
@@ -1811,6 +1844,7 @@ object {
     padding-top: 100%; }
   .page-template-menu .chocolate-image-wrapper > .content-image {
     position: absolute;
+    z-index: 0;
     top: 0;
     left: 0;
     right: 0;
@@ -1866,7 +1900,8 @@ object {
   .single-workshop-on-page a {
     text-decoration: none; }
   .single-workshop-on-page .workshop-image-wrapper {
-    position: relative; }
+    position: relative;
+    z-index: 0; }
     .single-workshop-on-page .workshop-image-wrapper:before {
       display: block;
       content: "";
@@ -1874,6 +1909,7 @@ object {
       padding-top: 100%; }
     .single-workshop-on-page .workshop-image-wrapper > .content-image {
       position: absolute;
+      z-index: 0;
       top: 0;
       left: 0;
       right: 0;
@@ -2030,7 +2066,8 @@ object {
     -webkit-backface-visibility: hidden;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
-    position: relative; }
+    position: relative;
+    z-index: 0; }
     .owl-carousel .owl-item:before {
       display: block;
       content: "";
@@ -2038,6 +2075,7 @@ object {
       padding-top: 100%; }
     .owl-carousel .owl-item > .content-image {
       position: absolute;
+      z-index: 0;
       top: 0;
       left: 0;
       right: 0;
